--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -988,7 +988,7 @@
   title      = {Self-organizing hierarchical feature maps},
   booktitle  = {1990 {IJCNN} {International} {Joint} {Conference} on {Neural} {Networks}},
   year       = 1990,
-  pages      = {279--284 vol.2},
+
   month      = jun,
   doi        = {10.1109/IJCNN.1990.137727},
 }
@@ -998,7 +998,7 @@
   title      = {Combining self-organizing maps},
   booktitle  = {International {Joint} {Conference} on {Neural} {Networks}},
   year       = 1989,
-  pages      = {499--502 vol.2},
+
   address    = {Washington, DC, USA},
   publisher  = {IEEE},
   url        = {http://ieeexplore.ieee.org/document/118289/},
@@ -1012,7 +1012,7 @@
   year       = 1989,
   volume     = 33,
   number     = 1,
-  pages      = {25--62},
+
   url        = {https://www.sciencedirect.com/science/article/pii/001002778990005X},
   doi        = {https://doi.org/10.1016/0010-0277(89)90005-X},
   issn       = {0010-0277},
@@ -1024,7 +1024,7 @@
   journal    = {IEEE J. Robotics Autom.},
   year       = 1986,
   volume     = 2,
-  pages      = {14--23},
+
 }
 
 @inproceedings{Edelman1982GroupSA,
@@ -1041,7 +1041,7 @@
   year       = 1982,
   volume     = 43,
   number     = 1,
-  pages      = {59--69},
+
 }
 
 @article{Milgram1967TheSW,
@@ -1050,7 +1050,7 @@
   journal    = {Psychology Today},
   year       = 1967,
   volume     = 2,
-  pages      = {60--67},
+
 }
 
 @article{Theil1961EconomicFA,
@@ -1067,7 +1067,7 @@
   year       = 1952,
   volume     = 237,
   number     = 641,
-  pages      = {37--72},
+
   issn       = 804622,
   publisher  = {The Royal Society},
 }
@@ -1078,14 +1078,14 @@
   journal    = {Bell Syst. Tech. J.},
   year       = 1948,
   volume     = 27,
-  pages      = {379--423},
+
 }
 
 @article{johnsson_associating_2008,
   author     = {Johnsson, Magnus and Balkenius, Christian},
   title      = {Associating {SOM} {Representations} of {Haptic} {Submodalities}},
   journal    = {Computer Science},
-  pages      = 6,
+
 }
 
 
@@ -1102,5 +1102,17 @@
 	author = {Fort, J.C.},
 	month = jul,
 	year = {2006},
-	pages = {812--816},
+
 }
+
+
+@article{alahakoon_dynamic_2000,
+	title = {Dynamic self-organizing maps with controlled growth for knowledge discovery},
+	doi = {10.1109/72.846732},
+	number = {3},
+	journal = {IEEE Transactions on Neural Networks},
+	author = {Alahakoon, D. and Halgamuge, S.K. and Srinivasan, B.},
+	year = {2000},
+	keywords = {Clustering algorithms, Humans, Data mining, Neural networks, Self organizing feature maps, Data analysis, Computer science, Unsupervised learning, Pattern analysis, Software engineering},
+}
+
